- [WIP] Create FileUploadService to handle the file upload - [FEATURE] Init Upload object on form if not present to show initial values - [FEATURE] Create target folder if not exist - [BUGFIX] Upload Model getter/setter for downloadlimit

--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -7,3 +7,6 @@ services:
   Wacon\Filetransfer\:
     resource: '../Classes/*'
     exclude: '../Classes/Domain/Model/*'
+
+  Wacon\Filetransfer\Service\FileUploadService:
+    public: true
