- [IMPORTANT] Implement Download function - [FEATURE] Add FlexForm for upload plugin to choose download page - [FEATURE] tx_filetransfer_domain_model_upload is adminOnly, Exclude token field - [NOTICE] ext_emconf: Wrong Email and company

--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -10,3 +10,6 @@ services:
 
   Wacon\Filetransfer\Service\FileUploadService:
     public: true
+
+  Wacon\Filetransfer\Service\MailService:
+    public: true
