- [FEATURE] Add Symfony Task to delete downloaded uploads - [WIP] Add Symfony Task to delete expired uploads - [BUGFIX] Uploaded file needs the file extension

--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -13,3 +13,13 @@ services:
 
   Wacon\Filetransfer\Service\MailService:
     public: true
+
+  Wacon\Filetransfer\Command\DeleteDownloadedCommand:
+    tags:
+      - name: 'console.command'
+        command: 'filetransfer:delete_downloaded'
+
+  Wacon\Filetransfer\Command\DeleteExpiredCommand:
+    tags:
+      - name: 'console.command'
+        command: 'filetransfer:delete_expired'
