- [FEATURE] Add Symfony Task to delete expired uploads - [FEATURE] Add Symfony Task to delete files with no uploads relation

--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -23,3 +23,8 @@ services:
     tags:
       - name: 'console.command'
         command: 'filetransfer:delete_expired'
+
+  Wacon\Filetransfer\Command\GarbageCollectorCommand:
+    tags:
+      - name: 'console.command'
+        command: 'filetransfer:garbage_collector'
