--- a/.github/workflows/core12.yaml
+++ b/.github/workflows/core12.yaml
@@ -17,6 +17,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Install Compose
+        uses: ndeloof/install-compose-action@v0.0.1
+        with:
+          version: v2.1.0 # defaults to 'latest'
+          legacy: true    # will also install in PATH as `docker-compose`
+      - run: docker-compose --version
+
       - name: Install testing system
         run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }}  -s ${{ matrix.composerInstall }}
 
