--- a/.github/workflows/core14.yaml
+++ b/.github/workflows/core14.yaml
@@ -1,27 +1,27 @@
-name: core 12
+name: core 14
 
 on: [ push, pull_request ]
 
 jobs:
   tests:
-    name: v12
-    runs-on: ubuntu-22.04
+    name: v14
+    runs-on: ubuntu-latest
     strategy:
       # This prevents cancellation of matrix job runs, if one/two already failed and let the
       # rest matrix jobs be executed anyway.
       fail-fast: false
       matrix:
-        php: [ '8.1', '8.2', '8.3' ]
+        php: [ '8.2', '8.3', '8.4' ]
         composerInstall: [ 'composerInstallLowest', 'composerInstallHighest' ]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
       - name: Install testing system
-        run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }}  -s ${{ matrix.composerInstall }}
+        run: Build/Scripts/runTests.sh -t 14 -p ${{ matrix.php }}  -s ${{ matrix.composerInstall }}
 
       - name: Lint PHP
-        run: Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -s lint
+        run: Build/Scripts/runTests.sh -t 14 -p ${{ matrix.php }} -s lint
 
       - name: Validate code against CGL
-        run: PHP_CS_FIXER_IGNORE_ENV=1 Build/Scripts/runTests.sh -t 12 -p ${{ matrix.php }} -s cgl -n
+        run: PHP_CS_FIXER_IGNORE_ENV=1 Build/Scripts/runTests.sh -t 14 -p ${{ matrix.php }} -s cgl -n
