--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "GPL-2.0-or-later",
 	"version": "3.0.0",
     "require": {
-        "php": ">= 8.2 <= 8.4",
+        "php": ">= 8.2 < 8.5",
         "typo3/cms-backend": "^13.4 || ^14.0",
         "typo3/cms-core": "^13.4 || ^14.0"
     },
